<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="SelectableText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/copyright_shellfire" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

       

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_others" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ics_openvpn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_arne" />

        
        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openvpn"
            android:textAppearance="?android:attr/textAppearanceMedium" />
     
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opevpn_copyright" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lzo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lzo_copyright" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openssl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_openssl" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouncy_castle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright_bouncycastle" />
    </LinearLayout>

</ScrollView>