<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        />
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_about"
        />
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/action_share"
        />
    
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/action_rate"
        />
    
</menu>
