<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/countryGrid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp" android:baselineAligned="false">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="7"
        android:columnCount="2"
        android:rowCount="2" >

        <Space />

        <TextView
            android:id="@+id/vpnName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="top|left"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:text="@string/default_vpn_name"
            android:textSize="@dimen/verybig" />

        <TextView
            android:id="@+id/vpnAccountType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_row="0"
            android:text="@string/default_server_type"
            android:textSize="@dimen/big" />

        <LinearLayout
            android:id="@+id/starLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="top|right"
            android:layout_marginRight="5dp"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star_1"
                android:src="@drawable/star_green" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star_2"
                android:src="@drawable/star_green" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star_3"
                android:src="@drawable/star_green" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/star_4"
                android:src="@drawable/star_green" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star_5"
                android:src="@drawable/star_green" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>