<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    
         <LinearLayout
        android:id="@+id/register_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/textRulesRegs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:padding="0dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeText"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needToAcceptAndRegister"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/mediumbig" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkRulesRegs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textSize="@dimen/medium"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textAcceptRulesRegs"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text=""
                    android:textSize="@dimen/mediumbig" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkNewsletter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/subscribeNewsletter"
                android:textSize="@dimen/mediumbig" />
            
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:onClick="onClickRegister_button"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register" />

            <Button
                android:id="@+id/have_an_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="onClickHaveAccount"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/i_have_an_account" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
