<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <Button
        android:id="@+id/sendLogToShellfire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSendLogToShellfire"
        android:text="@string/sendToShellfire"
        android:textSize="@dimen/big" />

    <TextView
        android:id="@+id/textAcceptRulesRegs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewAppLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/empty"
            android:textSize="@dimen/small" />

    </ScrollView>

</LinearLayout>
