<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".MainActivity$MainSectionFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activeSubscriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connectionState"
            android:textSize="@dimen/verybig" />

        <TextView
            android:id="@+id/connectionState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/disconnected"
            android:textColor="@color/not_connected"
            android:textSize="@dimen/verybig" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_vpn"
                android:textSize="@dimen/verybig" />

            <ProgressBar
                android:id="@+id/progressBarVpn"
                style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:indeterminate="true" />

             <include
                 android:id="@+id/includeViewSelectedVpn"
                 layout="@layout/vpn_list_item"
                 android:visibility="gone" />

            <TextView
                android:id="@+id/textAcceptRulesRegs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_server"
                android:textSize="@dimen/verybig" />

            <ProgressBar
                android:id="@+id/progressBarServer"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:indeterminate="true" />

            <include
                android:id="@+id/includeViewSelectedServer"
                layout="@layout/server_list_item"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickConnect"
                android:text="@string/connect"
                android:textSize="@dimen/verybig" />

            <TextView
                android:id="@+id/textViewAppLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectionAdvice" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>